# sdc

./: .gitignore  .gitlab-ci.cern.yml  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  Config.cmake.in  LICENSE  Makefile  README.md  inspect_sdc.py  notes.txt  sdc.pc.in  snippets.txt
cmake/: version.cmake
doc/: Doxyfile  Makefile  api-indexing.rst  api-utils.rst  api.rst  conf.py  grammar.rst  index.rst  requirements.txt  tutorial.rst
include/: sdc-base.hh  sdc-cache.hh  sdc-config.h  sdc-config.h.in  sdc-db.h  sdc-fs.hh  sdc-sql.hh  sdc-sqlite3.hh  sdc.hh  sdc.hh.in
sql/: init-tables.sql  test-sample-index.sql
src/: sdc-db.c  sdc-fs.cc  sdc-sql.cc  sdc-sqlite3.cc  sdc.cc
tests/: discover.cc  inspect-test.cc  inspector.cc  sdc-grammar.test.cc  sdc-incremental-load.test.cc  sdc-index-sqlite3.test.cc  sdc-index.test.cc  sdc-sql.test.cc  sdc-util.test.cc  sdc-validity-range.test.cc  sdc.cc
tests/assets/: one.txt
tests/assets/test1/: one.txt
tests/assets/test2/: one.txt
tests/assets/tutorial/: main.txt
tests/assets/tutorial/modifications/: erratum.txt
tests/tutorial/: main-1.cc
